# impulse

./: .coveragerc  .importlinter  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  justfile  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: main.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
src/impulse/: adapters.py  cli.py  dotfile.py  ports.py
src/impulse/application/: use_cases.py
tests/unit/application/: test_use_cases.py
