[project]
name = "impulse"
version = "2.2"
license = {text = "BSD 2-Clause License"}
description = "Command line interface for analyzing Python imports."
authors = [
    {name = "David Seddon", email = "david@seddonym.me"},
]
requires-python = ">=3.10"
dependencies = [
    "click>=6",
    "grimp>=3.13",
    "pytest>=8.4.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
readme = "README.rst"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/impulse"]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://impulse-cli.readthedocs.io/"
Source-code = "https://github.com/seddonym/impulse/"

[project.scripts]
impulse = "impulse.cli:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.rst"}

[tool.setuptools.package-data]
impulse = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 99

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 99

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true

[dependency-groups]
dev = [
    "import-linter>=2.8",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pyupgrade>=3.21.0",
    "ruff>=0.13.2",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
